make changes on codes

--- a/sendhubinterview/templates/home.html
+++ b/sendhubinterview/templates/home.html
@@ -5,7 +5,7 @@ Candidate name: Amy Huang <br/>
 How to test <br/>
 Post URL: https://hidden-dawn-9384.herokuapp.com/webservices/submit <br/>
 Test Post python file <a href="/static/PostTest.py">PostTest.py</a><br/>
-resume<a href="/static/amyresume.docx"> link </a>
+resume<a href="/static/amyresume.docx"> link </a><br/>
 code github link <a href="https://github.com/bigbearamy/sendhubinterview"> https://github.com/bigbearamy/sendhubinterview</a>
 </body>
 
